--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "node": ">=16"
   },
   "peerDependencies": {
-    "react": ">=18",
-    "react-dom": ">=18"
+    "react": ">=16",
+    "react-dom": ">=16"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
@@ -42,9 +42,11 @@
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
@@ -71,11 +73,10 @@
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rollup": "^3.23.0",
+    "rollup": "^3.26.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-sourcemaps": "^0.6.3",
-    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
     "ts-jest": "^29.1.0",
     "typedoc": "^0.24.7",
@@ -86,5 +87,8 @@
       "./node_modules/.bin/prettier --write",
       "./node_modules/.bin/eslint"
     ]
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
