--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "homepage": "",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "scripts": {
     "start": "rollup -c rollup.config.js -w",
     "build": "tsc && rollup -c rollup.config.js && yarn make:docs",
